# Mellow

./: .infisical.json  alembic.ini  enviornment.yml  pyproject.toml
.dvc/: config
alembic/: env.py
alembic/versions/: 819c983ee8e9_fix_broken_relationships.py  a0c5f6e69ada_initial_schema.py  a0f3ab6b07b7_fix_broken_relationships.py  ab82524b8e93_fix_broken_relationships.py
backend/: main.py
backend/ai/: cleaner.py
backend/api/: __init__.py  main.py
backend/api/routers/: cache.py  data_cleaning.py  data_sources.py  dataset.py  dataset_version.py  encrupted_secret.py  log.py  metric.py  permission.py  process_tracking.py  role_permission.py  roles.py  routes.py  tenant_user.py  tenants.py  time_series_meta.py  users.py  users_roles.py  version.py
backend/core/: config.py  logging.py
backend/databases/: models.py
backend/databases/crud/: crud_cache.py  crud_dataset.py  crud_dataset_version.py  crud_encrypted_secret.py  crud_log.py  crud_metric.py  crud_permissions.py  crud_process_tracking.py  crud_role.py  crud_tenant.py  crud_tenant_user.py  crud_user.py  crud_user_role.py  data_source.py  role_permission.py  time_series_meta.py
backend/databases/schemas/: cache.py  data_source.py  dataset.py  dataset_version.py  encrupted_secret.py  log.py  metric.py  permissions.py  process_tracking.py  role_permission.py  (+6 more)
backend/db/: create_table.py  models.py  session.py
backend/migrations/: env.py
configurations/: config.py  dependencies.py  passwords.py
data/: example_data.csv
data/raw/: sample.csv.dvc
frontend/: app.py
frontend/utils/: api.py
(+5 files in other folders)
